package sample;

import java.util.Collection;

public interface Readable {
    Collection read();
}
